<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.3</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>no.nav.familie.ef</groupId>
    <artifactId>familie-ef-vedtakhendelse</artifactId>
    <version>${revision}${sha1}${changelist}</version>

    <description>Lytter på vedtakhendelser fra andre ytelser på forskjellige topics og sender videre til en topic</description>

    <repositories>
        <repository>
            <id>confluent</id>
            <url>https://packages.confluent.io/maven/</url>
        </repository>
        <repository>
            <id>github</id>
            <url>https://maven.pkg.github.com/navikt/familie-felles</url>
        </repository>
    </repositories>
    <properties>
        <revision>1.0</revision>
        <changelist>-SNAPSHOT</changelist>
        <java.version>21</java.version>
        <kotlin.version>1.9.22</kotlin.version>
        <kafka-avro-serializer.version>7.6.0</kafka-avro-serializer.version>
        <avro.version>1.11.3</avro.version>
        <graphql-kotlin-spring-client.version>7.0.2</graphql-kotlin-spring-client.version>
        <graphql-kotlin-maven-plugin.version>6.5.3</graphql-kotlin-maven-plugin.version>
        <graphql-kotlin.version>3.5.0</graphql-kotlin.version>
        <ktlint-maven-plugin.version>1.7.0</ktlint-maven-plugin.version>
        <kontrakter.version>3.0_20231206111937_3c866af</kontrakter.version>
        <felles.version>2.20231201131108_ea25dd3</felles.version>
        <token-validation-spring-test.version>4.1.3</token-validation-spring-test.version> <!-- Denne burde være samme versjon som i felles -->
        <okhttp3.version>4.9.1</okhttp3.version> <!-- overskrever spring sin versjon, blir brukt av mock-oauth2-server -->
        <wiremock.version>2.35.2</wiremock.version>
        <mockk-jvm.version>1.13.10</mockk-jvm.version>
        <testcontainers.version>1.19.6</testcontainers.version>
        <start-class>no.nav.familie.ef.vedtakhendelse.ApplicationKt</start-class>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-reflect</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-stdlib-jdk8</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.kafka</groupId>
            <artifactId>spring-kafka</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-tomcat</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-jetty</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.avro</groupId>
            <artifactId>avro</artifactId>
            <version>${avro.version}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.familie.felles</groupId>
            <artifactId>http-client</artifactId>
            <version>${felles.version}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.familie.felles</groupId>
            <artifactId>kafka</artifactId>
            <version>${felles.version}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.familie.kontrakter</groupId>
            <artifactId>felles</artifactId>
            <version>${kontrakter.version}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.familie.kontrakter</groupId>
            <artifactId>enslig-forsorger</artifactId>
            <version>${kontrakter.version}</version>
        </dependency>
        <dependency>
            <groupId>io.confluent</groupId>
            <artifactId>kafka-avro-serializer</artifactId>
            <version>${kafka-avro-serializer.version}</version>
        </dependency>
        <dependency>
            <groupId>com.expediagroup</groupId>
            <artifactId>graphql-kotlin-spring-client</artifactId>
            <version>${graphql-kotlin-spring-client.version}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.foreldrepenger.abakus</groupId>
            <artifactId>abakus-kontrakt</artifactId>
            <version>2.0.1</version>
        </dependency>
        <dependency>
            <groupId>com.github.tomakehurst</groupId>
            <artifactId>wiremock-jre8</artifactId>
            <version>${wiremock.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.kafka</groupId>
            <artifactId>spring-kafka-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.mockk</groupId>
            <artifactId>mockk-jvm</artifactId>
            <version>${mockk-jvm.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>no.nav.security</groupId>
            <artifactId>token-validation-spring-test</artifactId>
            <version>${token-validation-spring-test.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>postgresql</artifactId>
            <version>${testcontainers.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
        <testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
        <finalName>${project.artifactId}</finalName>
        <plugins>
            <plugin>
                <groupId>org.jetbrains.kotlin</groupId>
                <artifactId>kotlin-maven-plugin</artifactId>
                <configuration>
                    <args>
                        <arg>-Xjsr305=strict</arg>
                    </args>
                    <compilerPlugins>
                        <plugin>spring</plugin>
                    </compilerPlugins>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.jetbrains.kotlin</groupId>
                        <artifactId>kotlin-maven-allopen</artifactId>
                        <version>${kotlin.version}</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <fork>true</fork>
                    <mainClass>${start-class}</mainClass>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>ktlint</id>
                        <phase>verify</phase>
                        <configuration>
                            <target name="ktlint">
                                <java taskname="ktlint" dir="${basedir}" fork="true" failonerror="true"
                                      classpathref="maven.plugin.classpath" classname="com.pinterest.ktlint.Main">
                                    <arg value="src/**/*.kt"/>
                                </java>
                            </target>
                        </configuration>
                        <goals>
                            <goal>run</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>ktlint-format</id>
                        <phase>validate</phase>
                        <configuration>
                            <target name="ktlint">
                                <java taskname="ktlint" dir="${basedir}" fork="true" failonerror="true"
                                      classpathref="maven.plugin.classpath" classname="com.pinterest.ktlint.Main">
                                    <jvmarg value="--add-opens"/>
                                    <jvmarg value="java.base/java.lang=ALL-UNNAMED"/>
                                    <arg value="-F"/>
                                    <arg value="src/**/*.kt"/>
                                </java>
                            </target>
                        </configuration>
                        <goals>
                            <goal>run</goal>
                        </goals>
                    </execution>
                </executions>
                <dependencies>
                    <dependency>
                        <groupId>com.pinterest</groupId>
                        <artifactId>ktlint</artifactId>
                        <version>0.50.0</version>
                    </dependency>
                    <!-- additional 3rd party ruleset(s) can be specified here -->
                </dependencies>
            </plugin>
        </plugins>
    </build>
</project>
